--- a/retrotrack.web/package.json
+++ b/retrotrack.web/package.json
@@ -6,34 +6,28 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --fix"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "^7.13.5",
-    "@mantine/form": "^7.13.5",
-    "@mantine/hooks": "^7.13.5",
-    "@mantine/notifications": "^7.13.5",
-    "@tabler/icons-react": "^3.21.0",
-    "@types/lodash": "^4.17.13",
-    "clsx": "^2.1.1",
-    "cookies-next": "^5.0.2",
-    "eslint-config-standard-with-typescript": "^39.1.1",
-    "lodash": "^4.17.21",
-    "mantine-datatable": "^7.12.4",
-    "next": "15.2.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "@mantine/core": "^8.0.2",
+    "@mantine/hooks": "^8.0.2",
+    "@mantine/notifications": "^8.0.2",
+    "@tabler/icons-react": "^3.34.0",
+    "next": "15.3.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/node": "^22",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "@eslint/eslintrc": "^3",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.3",
+    "postcss": "^8.5.4",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
+    "sass": "^1.89.1",
     "typescript": "^5"
-  },
-  "overrides": {
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1"
   }
 }
