--- a/RetroTrack.Api/Dockerfile
+++ b/RetroTrack.Api/Dockerfile
@@ -12,11 +12,11 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["RetroTrack/RetroTrack/RetroTrack.Api.csproj", "RetroTrack/RetroTrack/"]
-COPY ["RetroTrack.Domain/RetroTrack.Domain.csproj", "RetroTrack.Domain/"]
-RUN dotnet restore "./RetroTrack/RetroTrack/RetroTrack.Api.csproj"
+COPY ["RetroTrack/RetroTrack.Api/RetroTrack.Api.csproj", "RetroTrack/RetroTrack.Api/"]
+COPY ["RetroTrack/RetroTrack.Domain/RetroTrack.Domain.csproj", "RetroTrack/RetroTrack.Domain/"]
+RUN dotnet restore "./RetroTrack/RetroTrack.Api/RetroTrack.Api.csproj"
 COPY . .
-WORKDIR "/src/RetroTrack/RetroTrack"
+WORKDIR "/src/RetroTrack/RetroTrack.Api"
 RUN dotnet build "./RetroTrack.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
