--- a/retrotrack.web/package.json
+++ b/retrotrack.web/package.json
@@ -9,27 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "^8.1.2",
-    "@mantine/form": "^8.1.2",
-    "@mantine/hooks": "^8.1.2",
-    "@mantine/notifications": "^8.1.2",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@mantine/core": "^8.0.2",
+    "@mantine/form": "^8.1.1",
+    "@mantine/hooks": "^8.0.2",
+    "@mantine/notifications": "^8.0.2",
     "@tabler/icons-react": "^3.34.0",
-    "@tanstack/react-query": "^5.81.5",
-    "next": "15.3.5",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "@tanstack/react-query": "^5.80.7",
+    "next": "15.3.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^24",
+    "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.3.5",
-    "postcss": "^8.5.6",
-    "postcss-preset-mantine": "^1.18.0",
+    "eslint-config-next": "15.3.3",
+    "postcss": "^8.5.4",
+    "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
-    "sass": "^1.89.2",
+    "sass": "^1.89.1",
     "typescript": "^5"
   }
 }
