--- a/RetroTrack.Api/Dockerfile
+++ b/RetroTrack.Api/Dockerfile
@@ -12,9 +12,9 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["RetroTrack/RetroTrack.Api/RetroTrack.Api.csproj", "RetroTrack/RetroTrack.Api/"]
-COPY ["RetroTrack/RetroTrack.Domain/RetroTrack.Domain.csproj", "RetroTrack/RetroTrack.Domain/"]
-RUN dotnet restore "./RetroTrack/RetroTrack.Api/RetroTrack.Api.csproj"
+COPY ["RetroTrack.Api/RetroTrack.Api.csproj", "RetroTrack/RetroTrack.Api/"]
+COPY ["RetroTrack.Domain/RetroTrack.Domain.csproj", "RetroTrack/RetroTrack.Domain/"]
+RUN dotnet restore "./RetroTrack.Api/RetroTrack.Api.csproj"
 COPY . .
 WORKDIR "/src/RetroTrack/RetroTrack.Api"
 RUN dotnet build "./RetroTrack.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
