--- a/.editorconfig
+++ b/.editorconfig
@@ -262,7 +262,7 @@ dotnet_style_explicit_tuple_names = true:suggestion
 dotnet_style_prefer_inferred_tuple_names = true:suggestion
 dotnet_style_prefer_inferred_anonymous_type_member_names = true:suggestion
 dotnet_style_prefer_compound_assignment = true:suggestion
-end_of_line = crlf
+end_of_line = lf
 dotnet_style_prefer_simplified_interpolation = true:suggestion
 dotnet_style_prefer_collection_expression = when_types_loosely_match:suggestion
 dotnet_style_namespace_match_folder = true:suggestion
@@ -283,4 +283,4 @@ dotnet_style_qualification_for_method = false:silent
 dotnet_style_qualification_for_event = false:silent
 
 dotnet_diagnostic.CS8019.severity = error
-insert_final_newline = false
+insert_final_newline = true
