--- a/retrotrack.web/package.json
+++ b/retrotrack.web/package.json
@@ -6,18 +6,19 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint --fix . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
-    "@mantine/core": "^8.2.5",
-    "@mantine/form": "^8.2.5",
-    "@mantine/hooks": "^8.2.5",
-    "@mantine/notifications": "^8.2.5",
+    "@mantine/core": "^8.2.7",
+    "@mantine/form": "^8.2.7",
+    "@mantine/hooks": "^8.2.7",
+    "@mantine/notifications": "^8.2.7",
     "@tabler/icons-react": "^3.34.1",
-    "@tanstack/react-query": "^5.85.3",
-    "next": "15.4.6",
+    "@tanstack/react-query": "^5.85.5",
+    "next": "15.5.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
@@ -27,7 +28,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.4.6",
+    "eslint-config-next": "15.5.0",
     "postcss": "^8.5.6",
     "postcss-preset-mantine": "^1.18.0",
     "postcss-simple-vars": "^7.0.1",
